added test and functionality decline invitation
